<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/baby_blue"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_back"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/txt_style"
                android:elevation="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/txt_team_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/txt_style"
                android:elevation="20dp"
                android:ems="10"
                android:text="@string/team_name"
                android:entries="@array/team_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txt_stage"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/txt_style"
                android:elevation="20dp"
                android:ems="10"
                android:hint="@string/stage"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/txt_style"
                android:elevation="20dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txt_phone_number"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/txt_style"
                android:elevation="20dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:padding="10dp"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txt_birth_date"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:backgroundTint="@color/white"
                android:foregroundGravity="right"
                android:layout_gravity="right"
                android:gravity="right"
                android:background="@drawable/txt_style"
                app:elevation="20dp"
                android:textColor="@color/black"
                android:text="@string/birth_date"
                android:inputType="textPersonName"
                android:textSize="14sp"
                />
            </androidx.cardview.widget.CardView>
            <EditText
                android:id="@+id/txt_father"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/txt_style"
                android:elevation="20dp"
                android:ems="10"
                android:hint="@string/father"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/txt_entering_date"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                android:foregroundGravity="right"
                android:layout_gravity="right"
                android:gravity="right"
                android:background="@drawable/txt_style"
                android:text="@string/entering_date"
                android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/txt_rank"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/txt_style"
                android:elevation="20dp"
                android:ems="10"
                android:hint="@string/rank"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txt_hobby"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/txt_style"
                android:elevation="20dp"
                android:ems="10"
                android:hint="@string/hobby"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/txt_promise_date"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:foregroundGravity="right"
                android:layout_gravity="right"
                android:gravity="right"
                android:background="@drawable/txt_style"
                app:elevation="20dp"
                android:text="@string/promise_date"
                android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/txt_church"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/txt_style"
                android:elevation="20dp"
                android:ems="10"
                android:hint="@string/church"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="-10dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp"
                >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:backgroundTint="@color/royal_blue"
                android:background="@drawable/txt_style"
                android:textColor="@color/white"
                android:text="@string/update"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <data>

    </data>
</layout>